--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -59,10 +59,8 @@
 <!-- Country -->
 <div class="control-group">
   <label class="control-label">Country</label>
-  <div class="controls">  
-    <select name="user[country]">                            
-     <%= render "shared/country_select" %>
-    </select>
+  <div class="controls">
+    <%= f.collection_select :country_id, Country.all, :id, :name %>
   </div>
 </div>  
 <!-- State -->
