--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -62,7 +62,7 @@
                           </td>
                           <td></td>
                           <td>
-                            
+                            <%= image_tag "/images/country_icons/#{user.country.id}.png" %>
                             <%= user.country.name %>
                           </td>
                           <td><%= user.created_at.strftime("%B %d, %Y") %></td>
