--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -48,154 +48,15 @@
         </ul>
         <% end %>
 
-        <!-- Notifications -->
-        <ul class="nav pull-right">
-          
-          <!-- Comment button with number of latest comments count -->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-book"></i> Catalog <span class="badge badge-success">6</span>
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-plus-sign"></i> Recently Added</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6 -->
-                    <a href="#">Hi :)</a> <span class="label label-warning pull-right">10:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">How are you?</a> <span class="label label-warning pull-right">20:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">What are you doing?</a> <span class="label label-warning pull-right">14:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>                  
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li>
-
-            <!-- Message button with number of latest messages count-->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-download-alt"></i> Buy 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-envelope-alt"></i> Messages</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6 -->
-                    <a href="#">Hello how are you?</a>
-                    <!-- List item para -->
-                    <p>Quisque eu consectetur erat eget  semper...</p>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Today is wonderful?</a>
-                    <p>Quisque eu consectetur erat eget  semper...</p>
-                    <hr />
-                  </li>
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li>
-
-            <!-- Members button with number of latest members count -->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-upload-alt"></i> Sell 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-user"></i> Users</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6-->
-                    <a href="#">Ravi Kumar</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Balaji</a> <span class="label label-important pull-right">Premium</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Kumarasamy</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>                  
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li> 
-
-              <!-- Members button with number of latest members count -->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-gift"></i> Trade 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-user"></i> Users</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6-->
-                    <a href="#">Ravi Kumar</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Balaji</a> <span class="label label-important pull-right">Premium</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Kumarasamy</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>                  
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li> 
-
-        </ul>
+        <!-- Search Box -->
+        <div class="nav pull-right">
+          <form class="form-inline">
+            <div class="input-append row-fluid">
+              <input type="text" class="span8" placeholder="Search">
+              <button type="submit" class="btn btn-info">Search</button>
+            </div>
+          </form>
+        </div>
 
       </div>
 
