--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -75,20 +75,8 @@
                   </div>
 
                     <div class="widget-foot">
-                    <%= will_paginate @users %>
-
-                      <div class="pagination pull-right">
-                        <ul>
-                          <li><a href="#">Prev</a></li>
-                          <li><a href="#">1</a></li>
-                          <li><a href="#">2</a></li>
-                          <li><a href="#">3</a></li>
-                          <li><a href="#">4</a></li>
-                          <li><a href="#">Next</a></li>
-                        </ul>
-                      </div>
+                      <%= will_paginate @users, :class => 'pagination pull-right' %>
                       <div class="clearfix"></div> 
-
                     </div>
 
                 </div>
