--- a/app/views/catalog_sets/index.html.erb
+++ b/app/views/catalog_sets/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Catalog") %>
+<% provide(:title, "Catalog Sets") %>
 <div class="content">
   <!-- Sidebar -->
   <%= render "shared/sidebar" %>
@@ -8,7 +8,7 @@
       <!-- Page heading -->
       <div class="page-head">
         <!-- Page heading -->
-        <h2 class="pull-left">Catalog</h2>
+        <h2 class="pull-left">Catalog Sets</h2>
 
 
         <!-- Breadcrumb -->
