Stores and subdomains

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <%= render "shared/sidebar" %>
   	<div class="mainbar">
 	    <div class="page-head">
-	      <h2 class="pull-left"><%= "Environment: #{Rails.env}" %></h2>
+	      <h2 class="pull-left"><%= "Environment: #{Rails.env} | Subdomain: #{@subdomain}" %></h2>
         <div class="clearfix"></div>
 	    </div>
 
