--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -40,6 +40,7 @@
 
         <ul>
           <li><%= link_to "Browse Catalog", catalog_index_path %></li>
+          <li><%= link_to "Browse Stores", stores_path %></li>
           <li><a href="login.html">My Orders</a></li>
           <li><a href="post.html">My Wishlist</a></li>
         </ul>
