--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -1,33 +1,22 @@
 <div class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <!-- Menu button for smallar screens -->
       <a class="btn btn-navbar mobile-btn-bar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </a>
-      <!-- Site name for smallar screens -->
-      <a href="/" class="brand">
+      <a href="<%= root_url(:subdomain => "") %>" class="brand">
         <img src="/img/logo.png" alt="Playmotrade - Unofficial Playmobil Marketplace"/>
       </a>
-
-      <!-- Navigation starts -->
-      <div class="nav-collapse collapse">        
-
-
-
-        <!-- Links -->
+      <div class="nav-collapse collapse">
         <% if user_signed_in? %>
         <ul class="nav pull-right">
-          <li class="dropdown pull-right">            
+          <li class="dropdown pull-right">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <%= image_tag current_user.avatar.url(:small) %> <%= current_user.username %> <b class="caret"></b>              
+              <%= image_tag current_user.avatar.url(:small) %> <%= current_user.username %> <b class="caret"></b>
             </a>
-            
-            <!-- Dropdown menu -->
             <ul class="dropdown-menu">
-              
               <li><%= link_to(edit_user_registration_path) do %>
                 <i class="icon-user"></i> Edit Settings
                 <% end %>
@@ -47,9 +36,7 @@
           </li>
         </ul>
         <% end %>
-
       </div>
-
     </div>
   </div>
 </div>
