--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -53,7 +53,11 @@
         </a>
 
         <ul>
-          <li><a href="grid.html">My Store</a></li>
+        <% if current_user.present? && current_user.store.present? %>
+          <li><%= link_to "My Store", root_url(:subdomain => current_user.store.alias) %></li>
+        <% else %>
+          <li><%= link_to "Create a Store", new_store_path %></li>
+        <% end %>
           <li><a href="gallery.html">Browse Stores</a></li>
           <li><a href="error.html">Create a Store</a></li>
         </ul>
