--- a/app/views/shared/_store_sidebar.html.erb
+++ b/app/views/shared/_store_sidebar.html.erb
@@ -14,11 +14,16 @@
 
     <ul class="navi">
 
-      <li class="nred">
-        <%= link_to root_url(:subdomain => @store.alias) do %>
-          <i class="icon-home"></i> Store Home
+      <li class="has_submenu nred">
+        <a href="#">
+          <i class="icon-home"></i> My Store
           <span class="pull-right"><i class="icon-angle-right"></i></span>
-        <% end %>
+        </a>
+
+        <ul>
+          <li><%= link_to "My Store Home", root_url(:subdomain => @store.alias) %></li>
+          <li><%= link_to "My Store Settings", edit_store_path(@store) %></li>
+        </ul>
       </li>
 
       <li class="has_submenu nred">
