--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -7,7 +7,13 @@
         <div class="clearfix"></div>
       </div>
   <div class="matter">
-
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12">
+          <%= @store.landing_page.to_s.html_safe %>
+        </div>
+      </div>
+    </div>
     <div class="clearfix"></div>
   </div>
   <div class="clearfix"></div>
