--- a/app/views/shared/_store_admin_sidebar.html.erb
+++ b/app/views/shared/_store_admin_sidebar.html.erb
@@ -11,43 +11,39 @@
         </div>
       </form>
     </div>
-
     <ul class="navi">
-
-      <li class="nred">
-        <%= link_to root_url(:subdomain => @store.alias) do %>
-          <i class="icon-home"></i> Store Home
+      <li class="has_submenu nred">
+        <a href="#">
+          <i class="icon-home"></i> My Store
           <span class="pull-right"><i class="icon-angle-right"></i></span>
-        <% end %>
+        </a>
+        <ul>
+          <li><%= link_to "My Store Home", root_url(:subdomain => @store.alias) %></li>
+          <li><%= link_to "My Store Settings", edit_store_path(@store) %></li>
+        </ul>
       </li>
-
       <li class="has_submenu nred">
         <a href="#">
           <i class="icon-th"></i> Manage Inventory
           <span class="pull-right"><i class="icon-angle-right"></i></span>
         </a>
-
         <ul>
+          <li><a href="post.html">My Current Inventory</a></li>
           <li><a href="post.html">List a Set</a></li>
           <li><a href="post.html">Part Out a Set</a></li>
           <li><a href="post.html">List a Part</a></li>
         </ul>
       </li>
-
       <li class="has_submenu nred">
         <a href="#">
           <i class="icon-th"></i> My Store Orders
           <span class="pull-right"><i class="icon-angle-right"></i></span>
         </a>
-
         <ul>
           <li><a href="post.html">Open</a></li>
           <li><a href="post.html">Closed</a></li>
         </ul>
       </li>
-
     </ul>
-
   </div>
-
 </div>
