--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -51,7 +51,7 @@
                           </div>
                         </div>
                         <div class="control-group">
-                          <label class="control-label" for="user[alias]">Alias</label>
+                          <label class="control-label" for="store[alias]">Alias</label>
                           <div class="controls">
                             <%= f.text_field :alias, :class => "input-large" %><br/>
                             <span class="help-inline">Keep this short and without spaces, dashes, underscores, or special characters.<br/>This will serve as your Playmotrade subdomain (yourstore.playmotrade.com)</span>
@@ -80,6 +80,19 @@
                             <label class="checkbox inline">
                                <%= f.check_box :active %> Open?
                             </label>
+                          </div>
+                        </div>
+                        <div class="control-group">
+                          <label class="control-label" for="store[closed_message]">Closed Message</label>
+                          <div class="controls">
+                            <%= f.text_area :closed_message, :class => "input-large" %>
+                          </div>
+                        </div>
+                        <div class="control-group">
+                          <label class="control-label" for="store[bypass_password]">Break-in Password</label>
+                          <div class="controls">
+                            <%= f.text_field :bypass_password, :class => "input-large" %><br/>
+                            <span class="help-inline">You can allow potential customers access to your closed store by giving them this password.</span>
                           </div>
                         </div>
                         <div class="form-actions">
