--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -13,6 +13,7 @@
       </div>
       <div class="matter">
         <div class="container-fluid">
+        <%= render "shared/flash" %>
           <div class="row-fluid">
             <div class="span12">
                 <div class="widget wred">
