--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -12,6 +12,7 @@
       </div>
   <div class="matter">
     <div class="container-fluid">
+      <%= render "shared/flash" %>
       <div class="row-fluid">
         <div class="span12">
           <%= @store.landing_page.to_s.html_safe %>
