--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -45,6 +45,9 @@ thead.widget-head{
   line-height: 28px;
 }
 
+.text-right{text-align:right !important;}
+.store-prices{padding:0 4px 3px 0;}
+
 .field_with_errors .checkbox,.field_with_errors .radio,.field_with_errors input,.field_with_errors select,.field_with_errors textarea{color:#b94a48 !important;}
 .field_with_errors input,.field_with_errors select,.field_with_errors textarea{border-color:#b94a48 !important;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075)!important;}
 .field_with_errors input:focus,.field_with_errors select:focus,.field_with_errors textarea:focus{border-color:#953b39 !important;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392 !important;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392 !important;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392 !important;}
