--- a/app/views/shared/_store_sidebar.html.erb
+++ b/app/views/shared/_store_sidebar.html.erb
@@ -1,4 +1,4 @@
- <div class="sidebar">
+<div class="sidebar">
   <div class="sidebar-dropdown"><a href="#">Navigation</a></div>
   <div class="sidebar-inner">
     <div class="sidebar-widget">
@@ -11,29 +11,24 @@
         </div>
       </form>
     </div>
-
     <ul class="navi">
-
       <li class="nred">
         <%= link_to root_url(:subdomain => @store.alias) do %>
           <i class="icon-home"></i> Store Home
           <span class="pull-right"><i class="icon-angle-right"></i></span>
         <% end %>
       </li>
-
       <li class="has_submenu nred">
         <a href="#">
           <i class="icon-th"></i> Browse Inventory
           <span class="pull-right"><i class="icon-angle-right"></i></span>
         </a>
-
         <ul>
-          <li><%= link_to "All Parts", catalog_index_path %></li>
-          <li><%= link_to "All Sets", stores_path %></li>
+          <li><%= link_to "All Parts", store_inventory_path(@store, :parts) %></li>
+          <li><%= link_to "All Sets", store_inventory_path(@store, :sets) %></li>
           <li><a href="post.html">On My Wishlist</a></li>
         </ul>
       </li>
-
       <li class="has_submenu nred">
         <a href="#">
           <i class="icon-th"></i> My Store Orders
@@ -45,9 +40,6 @@
           <li><a href="post.html">Closed</a></li>
         </ul>
       </li>
-
     </ul>
-
   </div>
-
 </div>
