--- a/app/views/stores/inventory/_sets.html.erb
+++ b/app/views/stores/inventory/_sets.html.erb
@@ -1,10 +1,9 @@
 <tr>
-  <td><%= image_tag item.catalog_part.image.url(:small) %></td>
+  <td><%= image_tag item.catalog_set.image.url(:small) %></td>
   <td>
-    <strong><%= item.catalog_part.name %></strong><br/>
-    <%= item.catalog_part.number %>
+    <strong><%= item.catalog_set.name %></strong><br/>
+    <%= item.catalog_set.number %>
   </td>
-  <td><strong>Color:</strong> <%= item.catalog_part.try(:color) %></td>
   <td class="text-right">
     <form>
       <div class="text-right store-prices">
